# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: linter-checker.yml  project-check.yml  test-checker.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: json_data.py  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: statuses.json  users.json
task_manager/labels/: urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_remove_status_timestamp_status_created_at.py
task_manager/tasks/: urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_executor.py  0003_alter_task_executor.py  0004_tasklabel_task_labels.py  0005_alter_tasklabel_task.py
task_manager/templates/: base.html  index.html
task_manager/templates/components/: footer.html
task_manager/templates/statuses/: create.html  delete.html  show.html  update.html
task_manager/templates/users/: delete.html  login.html  register.html  show.html  update.html
task_manager/tests/: test_labels.py  test_statuses.py  test_task_manager.py  test_tasks.py  test_users.py
task_manager/tests/fixtures/: label.json  status.json  task.json  user.json
task_manager/users/: forms.py  tests.py  urls.py  utils.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py
(+2 files in other folders)
